# Testing-MCP-Servers

./: .gitignore  Dockerfile  README.md  check_branches.py  debug_extraction.py  env.example  mcp.example.json  mcp.json  mcp_server.py  pr_test_208110f9.md  pyproject.toml  requirements.txt  server.py
mcp-fixtures/: 20260514181608-0aeecc.md  20260514181837-ec75be.md  base-ahead-20260514181837-ec75be.txt
src/travel_advisor/: __init__.py  __main__.py  server.py
src/travel_advisor/tools/: __init__.py  toolhandler.py  travel_data.py  travel_tool.py
test_files/: file1_208110f9.md  file1_2957ff82.md  file1_6a445eb2.md  file1_6ea48ca9.md  file1_aac30a5a.md  file2_208110f9.md  file2_2957ff82.md  file2_6a445eb2.md  file2_6ea48ca9.md  file2_aac30a5a.md  test_208110f9.txt  test_2957ff82.txt  test_6a445eb2.txt  test_6ea48ca9.txt  test_aac30a5a.txt
tests/: __init__.py  conftest.py  test_calculator_tool.py  test_placeholder.py  test_speed_test_tool.py  test_transport_smoke.py  test_travel_advisor.py
tools/: __init__.py  calculator_tool.py  speed_measurement_tool.py  speed_test_tool.py  toolhandler.py  travel_data.py  travel_tool.py  weather_tool.py
