[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-weather-mcp"
version = "1.0.0"
authors = [
    { name = "RAISE Team" },
]
description = "A production-ready MCP server providing deterministic weather advisory - supports stdio, SSE, and Streamable HTTP modes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.0",
    "starlette>=0.27.0",
    "uvicorn>=0.20.0",
    "requests>=2.32.2",
    "urllib3>=2.0.0",
]

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[project.scripts]
simple-weather-mcp = "server:cli_main"

[project.urls]
Source = "https://github.com/Sourav4670/Testing-MCP-Servers"
